# curlozengine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  index.html  maintainer.md
assets/scripts/: test.lua
config/: engine.toml  entity.json
include/audio/: au_types.hpp  audio.hpp  native.hpp
include/config/: config.hpp
include/core/: assert.hpp  enginestate.hpp  logs.hpp  time.hpp
include/ecs/: componentmanager.hpp  components.hpp  componentstorage.hpp  ecs.hpp  entity.hpp  entitymanager.hpp  scene.hpp  variables.hpp
include/math/: localtransform.hpp  mat4x4.hpp  math.hpp  quat.hpp  vec2.hpp  vec3.hpp  vec4.hpp  worldtransform.hpp
include/renderer/: cleaners.hpp  context.hpp  devicecontext.hpp  framecontext.hpp  image.hpp  initializers.hpp  mainloop.hpp  pipelinecontext.hpp  rendercomponent.hpp  renderer.hpp  swapchaincontext.hpp  test.hpp  variables.hpp  vk_types.hpp
include/renderer/assets/: drawmodel.hpp  modeldata.hpp
include/renderer/context/: commandcontext.hpp  context.hpp  devicecontext.hpp  framecontext.hpp  pipelinecontext.hpp  swapchaincontext.hpp
include/renderer/shaderdata/: shaderdata.hpp
include/renderer/shaderdata/bufferarray/: indexbuffer.hpp  uvbuffer.hpp  vertexbuffer.hpp
include/renderer/shaderdata/descriptor/: descriptor.hpp  descriptorlayout.hpp  texture.hpp  uniformbuffers.hpp
include/renderer/shaderdata/pushconstant/: mainpipeline.hpp
include/renderer/utility/: buffer.hpp  image.hpp  memory.hpp  offsetalignment.hpp
include/scripting/: luafunctions.hpp  luainterface.hpp  scripting.hpp
include/window/: keyboard.hpp  native.hpp  variables.hpp  vulkanhelper.hpp  window.hpp  window_types.hpp
shaders/: triangle.frag  triangle.frag.spirv  triangle.vert  triangle.vert.spirv
src/: main.cpp
src/audio/: audio.cpp  native.cpp
src/config/: config.cpp
src/ecs/: ecs.cpp  scene.cpp
src/renderer/: cleaners.cpp  devicecontext.cpp  framecontext.cpp  image.cpp  initializers.cpp  mainloop.cpp  pipelinecontext.cpp  renderer.cpp  swapchaincontext.cpp
src/renderer/assets/: drawmodel.cpp  modeldata.cpp
src/renderer/context/: commandcontext.cpp  devicecontext.cpp  framecontext.cpp  pipelinecontext.cpp  swapchaincontext.cpp
src/renderer/shaderdata/: shaderdata.cpp
src/renderer/shaderdata/bufferarray/: indexbuffer.cpp  uvbuffer.cpp  vertexbuffer.cpp
src/renderer/shaderdata/descriptor/: descriptor.cpp  descriptorlayout.cpp  texture.cpp  uniformbuffers.cpp
src/renderer/utility/: buffer.cpp  image.cpp  memory.cpp
src/scripting/: luafunctions.cpp  luainterface.cpp  scripting.cpp
src/window/: keyboard.cpp  native.cpp  vulkanhelper.cpp  window.cpp
